force-app/main/default/objects/Merge_Customer_Detail__c/Merge_Customer_Detail__c.object-meta.xml
<CustomObject>
    <label>Merge Customer Detail</label>
    <nameField>
        <label>Merge Customer Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Customer Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>