force-app/main/default/objects/Merge_Customer_Detail__c/fields/FromCustomerID__c.field-meta.xml
<CustomField>
    <fullName>FromCustomerID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FromCustomerID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>