force-app/main/default/objects/Merge_Customer_Detail__c/fields/Merge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Merge_Customer__c</fullName>
    <label>Merge Customer</label>
    <referenceTo>Merge_Customer__c</referenceTo>
    <relationshipLabel>Merge Customer Detail</relationshipLabel>
    <relationshipName>Merge_Customer_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>